Registration and Query now happen async on workspace load
