# lapdog/api/controllers.py
@@ -36,11 +36,6 @@ def get_workspace_object(namespace, name):
     ws = readvar(current_app.config, 'storage', 'cache', namespace, name, 'manager')
     if ws is None:
         ws = lapdog.WorkspaceManager(namespace, name)
-        if ws.gateway.exists() and not ws.gateway.query_registration():
-            ws.gateway.register(
-                ws.workspace,
-                ws.bucket_id
-            )
         if readvar(current_app.config, 'storage', 'cache') is None:
             current_app.config['storage']['cache'] = {}
         if readvar(current_app.config, 'storage', 'cache', namespace) is None:
@@ -154,8 +149,26 @@ def workspace(namespace, name):
     ]
     data['configs'] = get_configs(namespace, name)
     data['attributes'] = ws.attributes
-    data['gateway'] = ws.gateway.exists()
     return data, 200
+
+
+@cached(600)
+def get_namespace_registered(namespace, name):
+    ws = get_workspace_object(namespace, name)
+    exists = ws.gateway.exists
+    return {
+        'exists': exists,
+        'registered': exists and ws.gateway.registered
+    }
+
+def register(namespace, name):
+    ws = get_workspace_object(namespace, name)
+    if ws.gateway.exists and not ws.gateway.registered:
+        ws.gateway.register(ws.workspace, ws.bucket)
+        get_namespace_registered.cache_clear()
+    return get_namespace_registered(namespace, name)
+
+
 
 @cached(120)
 def service_account():
@@ -370,14 +383,6 @@ def create_workspace(namespace, name, parent):
             'failed': True,
             'reason': text
         }, 200
-    fc.update_workspace_acl(
-        namespace,
-        name,
-        [{
-            'email': service_account()[0],
-            'accessLevel': 'WRITER',
-        }]
-    )
     return {
         'failed': False,
         'reason': 'success'
